--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #f5f5f5;
+    background-color: rgb(100, 100, 100);
     color: #333;
 }
 .container {
@@ -33,7 +33,6 @@ body {
 /* CUSTOMS */
 .widget {
     margin: 0.2rem;
-    /* border: 0.1rem solid black; */
     border-radius: 0.4rem;
     background-color: rgba( 200, 200, 200, 0.6);
     box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
@@ -48,14 +47,14 @@ body {
     font-weight:bolder;
     text-align: left;
     color: rgb(200, 200, 200);
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+    text-shadow: 1px 1px 4px rgba(0,0,0,1);
 }
 .clock-widget {
     text-align: left;
     font-size: larger;
     font-weight:bolder;
     color: rgb(200, 200, 200);
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+    text-shadow: 1px 1px 4px rgba(0,0,0,1);
 }
 
 #bg-widget-btn, #create-note-btn {
@@ -75,7 +74,6 @@ body {
     background-color: #007BFF;
     color: rgb(200, 200, 200);
 }
-/* links */
 
 /* Calendar widget */
 .calendar-header {
@@ -125,9 +123,9 @@ body {
     min-height: 40px;
     width: 200px;
     height: 180px;
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255,255,255,0.5);
     position: absolute;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
     overflow: hidden;
     resize: none;
     display: flex;
